welcome.lessons.welcome.bat.bool1.Makes10.scala.code
def makes10(a:Int, b:Int):Boolean = {
	if (a+b == 10){return true}
	else if (a == 10 || b == 10){return true}
		else {return false}
	else {return false}
}
